Adding some extensions to the Decorator pattern in the Beverage example. Specifically to be able to call a super constructor other than in the first line of a constructor, which is a preview feature in Java 24